Fix article Updated date nowrap in Chrome
Previous &nbsp; solution worked only in Firefox.

--- a/technicus/static/css/style.css
+++ b/technicus/static/css/style.css
@@ -191,6 +191,7 @@ hr {
     background-color: #5a5a6f;
     margin: 2.5rem auto;
 }
+.text-nowrap { text-wrap: nowrap; }
 
 /* Links */
 
